# MMSE

./: EXAMPLE_DIALOGUE.md  PROMPTING_GUIDE.md  PROMPT_FIXES.md  README.md  TELEPHONE_MMSE.md  main.py  pyproject.toml
mmse_graph/mmse_construct_update/: drawing_agent.py  graph_mmse_only_update.py  mmse_basic_agent.py  mmse_deep_agent.py  mmse_intake_agent.py  state_definition.py
mmse_graph/mmse_construct_update/local_system_prompt/: attention_calculation.txt  drawing.txt  intake.txt  load.py  naming.txt  orientation_place.txt  orientation_time.txt  reading.txt  recall.txt  registration.txt  repetition.txt  three_stage_command.txt  writing.txt
small-flask-app/: README.md  app.py
small-flask-app/static/: app.js  styles.css
small-flask-app/templates/: index.html
